--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body": "^5.1.0",
+    "crypto": "^1.0.1",
     "emoji": "^0.3.2",
+    "readable-stream": "^3.6.2",
     "through": "^2.3.8",
     "through2": "^4.0.2"
   }
